--- a/zeppelin/notebook/word-cloud/html/animated-word-cloud.html
+++ b/zeppelin/notebook/word-cloud/html/animated-word-cloud.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <body>
-  <script src="https://cdn.statically.io/gh/JohnnyFoulds/nyc-job-exploration/700bbf40/zeppelin/notebook/word-cloud/d3.v3.min.js"></script>
+  <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="https://cdn.statically.io/gh/JohnnyFoulds/nyc-job-exploration/700bbf40/zeppelin/notebook/word-cloud/d3.layout.cloud.js"></script>
   <script>
 
